test/modules/diten/usemodule/test_nested_use4.chpl
module outermost {
  module middlemost {
    module innermost {
      def f() {
        writeln("hello from innermost");
      }
    }
  }
}

def main() {
  use notoutermost.middlemost.innermost;
}

